--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,13 @@ header {
     animation-fill-mode: backwards;
     text-shadow: 0px 0px 5px rgb(0, 0, 0);
 }
+@keyframes nature {
+    0% {
+        opacity: 0;
+        transform: translateY(10rem);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
